--- a/src/scss/utils/vars.scss
+++ b/src/scss/utils/vars.scss
@@ -4,8 +4,10 @@ $mainFont: 'Roboto Condensed', Arial, sans-serif;
 // Size
 $mainFontColor: #000;
 $mainFontSize: 13px;
+$detailsFontSize: 18px;
 $mainFontWeight: 400;
 $mainTitleSize: 36px;
+$averageTitleSize: 20px;
 $mainTitleWeight: 700;
 $mainLineHeight: 1.5;
 
@@ -19,3 +21,5 @@ $smPhoneWidth: 320px;
 $mainColor: #4997D0;
 $backgroundColor: #E5E5E5;
 $defaultColor: #fff;
+
+$imgShadow: 0 0 0 4px rgba(73, 151, 208, 0.6);
